# sniffdet

./: .gitignore  CHANGES  CLAUDE.md  CMakeLists.txt  README.md  TODO  config.h.in  libsniffdet.pc.in  sniffdet.conf.in  sniffdet.spec.in
doc/: HOWITWORKS.md  libsniffdet-usage-example.c
man/: libsniffdet.3  sniffdet.1  sniffdet.conf.5
src/: CMakeLists.txt  config_file.c  iface-utils.c  log.c  log.h  sniffdet.c  sniffdet.h  test-config.c  util.c  util.h
src/examples/: libsniffdet-usage.c
src/lib/: CMakeLists.txt  arptest.c  dnstest.c  helpers.c  icmptest.c  init.c  latencytest.c  libsniffdet.h  ping.c
src/plugins/: CMakeLists.txt  null.c  plugins.h  stdout.c  xml.c
tests/: CMakeLists.txt  test_install.cmake
tests/integration/: CMakeLists.txt  responders.py  run_tests.py
tests/unit/: CMakeLists.txt  test_config.c  test_helpers.c  test_log.c  test_util.c
